--- a/style.css
+++ b/style.css
@@ -15,7 +15,11 @@ a{
 	display: block;
 	clear: both;
 }
+header, nav, h2, main-visual, footer{
+	font-family: Chalkduster, "Bradley hand", Courier, "Segoe Print", sans-serif;
+}
 header{
+	position: relative;
 	width: 90%;
 	padding: 15PX 0;
 	margin: 0 auto;
@@ -24,6 +28,15 @@ header{
 /*headerタグ内のHeadlineクラスにのみ反映される*/
 header .headline{
 	font-size: 32px;
+}
+.social{
+	position: absolute;
+	top: 22px;
+	right: 22px;
+}
+.social i{
+	display: inline-block;
+	margin-left: 20px;
 }
 /*nav内*/
 .nav-list{
@@ -182,3 +195,53 @@ footer{
 .footer-text{
 	color: #fff;
 }
+@media screen and (max-width: 425px){
+	header{
+		width: 100%;
+	}
+	.social {
+		position: static;
+	}
+	.nav-list{
+		width: 100%;
+	}
+	.nav-list-item{
+		width: 100%;
+		margin: 10px 0 0 0 ;
+	}
+	.main-visual{
+		width: 100%;
+	}
+	.main-visual-content{
+		width: 100%;
+	}
+	.main{
+		width: 100%;
+		padding: 10px;
+	}
+	.blog{
+		width: 100%;
+	}
+	.blog-image{
+		width: 50%;
+	}
+	.blog-text{
+		width: 50%;
+		padding: 10px 0 0 10px;
+	}
+	.pagenation-text{
+		margin: 0px 5px;
+	}\
+	.sidebar{
+		width: 100%;
+	}
+	.sidebar-headline, .instagram-headline, .categories-headline{
+		margin: 40px 0 0 0;
+	}
+	.sidebar-contents{
+		padding: 50px 0;
+	}
+	.instagram-box{
+		width: 48%;
+		padding-top: 48%;
+	}
